--- a/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@color/ninchat_color_modal_background"
         android:elevation="4dp"
         android:orientation="vertical">
 
@@ -20,21 +20,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/ninchat_chat_close_chat_dialog_title" />
+                android:text="@string/ninchat_chat_close_chat_dialog_title"
+                android:textColor="@color/ninchat_color_modal_title_text"/>
 
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:foreground="@color/ninchat_colorPrimaryDark" />
+            android:foreground="@color/ninchat_activity_bottom_matter_background" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
-            android:text="@string/ninchat_chat_close_chat_dialog_description" />
+            android:text="@string/ninchat_chat_close_chat_dialog_description"
+            android:textColor="@color/ninchat_color_modal_title_text" />
 
         <Button
             android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
