--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
+        android:background="@color/ninchat_color_modal_background"
         android:elevation="4dp"
         android:orientation="vertical">
 
@@ -22,14 +22,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/ninchat_chat_video_call_consent_title" />
+                android:text="@string/ninchat_chat_video_call_consent_title"
+                android:textColor="@color/ninchat_color_modal_title_text"/>
 
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:foreground="@color/ninchat_colorPrimaryDark" />
+            android:foreground="@color/ninchat_activity_bottom_matter_background" />
 
         <ImageView
             android:id="@+id/ninchat_video_call_consent_dialog_user_avatar"
@@ -39,21 +40,23 @@
             android:layout_margin="@dimen/ninchat_chat_activity_video_call_consent_image_margin"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_avatar_agent" />
+            android:src="@drawable/ninchat_chat_avatar_left" />
 
         <TextView
             android:id="@+id/ninchat_video_call_consent_dialog_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            tools:text="User name" />
+            tools:text="User name"
+            android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_description_margin_top"
-            android:text="@string/ninchat_chat_video_call_consent_description" />
+            android:text="@string/ninchat_chat_video_call_consent_description"
+            android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <Button
             android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
