--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -15,6 +15,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/ninchat_chat_activity_chat_started_bottom_margin"
         tools:text="Chat started"
+        android:textColor="@color/ninchat_color_info_text"
         android:visibility="gone"
         tools:visibility="visible"/>
 
@@ -28,11 +29,11 @@
 
         <ImageView
             android:id="@+id/ninchat_chat_message_agent_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
+            android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
-            android:layout_marginEnd="11dp"
-            android:src="@drawable/ninchat_avatar_agent"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
+            android:src="@drawable/ninchat_chat_avatar_left"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:layout_alignParentStart="true"
@@ -57,14 +58,16 @@
                     android:id="@+id/ninchat_chat_message_agent_name"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/ninchat_chat_activity_message_title_height"
-                    tools:text="Agent" />
+                    tools:text="Agent"
+                    android:textColor="@color/ninchat_color_chat_name" />
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_agent_timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    tools:text="Timestamp"/>
+                    tools:text="Timestamp"
+                    android:textColor="@color/ninchat_color_chat_timestamp"/>
 
             </LinearLayout>
 
@@ -84,7 +87,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="Message from agent"
-                    android:autoLink="none"/>
+                    android:autoLink="none"
+                    android:textColorLink="@color/ninchat_color_chat_bubble_left_link"
+                    android:textColor="@color/ninchat_color_chat_bubble_left_text"/>
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -94,20 +99,30 @@
                         android:id="@+id/ninchat_chat_message_agent_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        tools:layout_width="150dp"
+                        tools:layout_height="150dp"
                         tools:src="@drawable/ninchat_logo"
                         android:background="@color/ninchat_colorPrimaryDark"
                         android:adjustViewBounds="true" />
 
-                    <ImageView
+                    <RelativeLayout
                         android:id="@+id/ninchat_chat_message_agent_video_play_image"
-                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ninchat_play_video_attachment"
+                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
+                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
                         android:layout_centerInParent="true"
+                        android:background="@drawable/ninchat_icon_chat_play_video_background"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        tools:visibility="visible">
+
+                        <ImageView
+                            android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                            android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ninchat_icon_chat_play_video"
+                            android:layout_centerInParent="true"/>
+
+                    </RelativeLayout>
 
                 </RelativeLayout>
 
@@ -127,13 +142,13 @@
 
         <ImageView
             android:id="@+id/ninchat_chat_message_user_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
+            android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
-            android:layout_marginStart="11dp"
-            android:src="@drawable/ninchat_avatar_visitor"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_avatar_margin"
+            android:src="@drawable/ninchat_chat_avatar_right"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"/>
 
@@ -157,14 +172,17 @@
                     android:id="@+id/ninchat_chat_message_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="User" />
+                    tools:text="User"
+                    android:textColorLink="@color/ninchat_color_chat_bubble_right_link"
+                    android:textColor="@color/ninchat_color_chat_name"/>
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_user_timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    tools:text="Timestamp" />
+                    tools:text="Timestamp"
+                    android:textColor="@color/ninchat_color_chat_timestamp"/>
 
             </LinearLayout>
 
@@ -184,7 +202,7 @@
                     android:id="@+id/ninchat_chat_message_user_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/ninchat_color_chat_bubble_right_text"
                     tools:text="Message from user" />
 
                 <RelativeLayout
@@ -195,19 +213,29 @@
                         android:id="@+id/ninchat_chat_message_user_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        tools:layout_width="150dp"
+                        tools:layout_height="150dp"
                         tools:src="@drawable/ninchat_logo"
-                        android:adjustViewBounds="true" />
-
-                    <ImageView
+                        android:adjustViewBounds="false" />
+                    
+                    <RelativeLayout
                         android:id="@+id/ninchat_chat_message_user_video_play_image"
-                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                        android:src="@drawable/ninchat_play_video_attachment"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
+                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
+                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
+                        android:background="@drawable/ninchat_icon_chat_play_video_background"
                         android:layout_centerInParent="true"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        tools:visibility="visible">
+
+                        <ImageView
+                            android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                            android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                            android:src="@drawable/ninchat_icon_chat_play_video"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:layout_centerInParent="true"/>
+
+                    </RelativeLayout>
 
                 </RelativeLayout>
 
@@ -231,7 +259,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            tools:text="Chat ended" />
+            tools:text="Chat ended"
+            android:textColor="@color/ninchat_color_info_text" />
 
         <Button
             android:id="@+id/ninchat_chat_message_close"
