--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -1,8 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Common color definitions -->
     <color name="ninchat_colorPrimary">#242424</color>
     <color name="ninchat_colorPrimaryDark">#0D2230</color>
     <color name="ninchat_colorPrimaryAlpha">#80242424</color>
     <color name="ninchat_colorAccent">#008aff</color>
+    <color name="ninchat_colorTimestamp">#7492AA</color>
+    <color name="ninchat_activity_top_matter_background">@android:color/white</color>
     <color name="ninchat_activity_bottom_matter_background">#e9e9e9</color>
+
+    <!-- Public colors -->
+    <color name="ninchat_color_button_primary_text">@android:color/white</color>
+    <color name="ninchat_color_button_secondary_text">@color/ninchat_colorAccent</color>
+
+    <color name="ninchat_color_background_top">@color/ninchat_activity_top_matter_background</color>
+    <color name="ninchat_color_text_top">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_background_bottom">@color/ninchat_activity_bottom_matter_background</color>
+    <color name="ninchat_color_text_bottom">@color/ninchat_colorPrimary</color>
+
+    <color name="ninchat_color_info_text">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_link">@color/ninchat_colorAccent</color>
+
+    <color name="ninchat_color_chat_name">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_chat_timestamp">@color/ninchat_colorTimestamp</color>
+    <color name="ninchat_color_chat_bubble_left_text">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_chat_bubble_left_link">@color/ninchat_colorAccent</color>
+    <color name="ninchat_color_chat_bubble_right_text">@android:color/white</color>
+    <color name="ninchat_color_chat_bubble_right_link">@color/ninchat_colorAccent</color>
+
+    <color name="ninchat_color_textarea_text">#A2A2A2</color>
+    <color name="ninchat_color_textarea_submit_text">@color/ninchat_colorAccent</color>
+
+    <color name="ninchat_color_modal_background">@android:color/white</color>
+    <color name="ninchat_color_modal_title_text">@color/ninchat_colorPrimary</color>
+
+    <color name="ninchat_color_rating_positive_text">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_rating_neutral_text">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_rating_negative_text">@color/ninchat_colorPrimary</color>
 </resources>
