--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -266,7 +266,7 @@
             android:id="@+id/ninchat_chat_message_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/NinchatTheme.Button.Close"
+            style="@style/NinchatTheme.Button.Close.Chat"
             tools:text="Close"
             android:layout_gravity="center_horizontal" />
 
