--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="ninchat_button_corner_radius">30dp</dimen>
     <dimen name="ninchat_button_horizontal_padding">20dp</dimen>
     <dimen name="ninchat_button_vertical_margin">7dp</dimen>
+    <dimen name="ninchat_dialog_button_height">45dp</dimen>
 
     <dimen name="ninchat_activity_top_matter_top_margin">48dp</dimen>
     <dimen name="ninchat_activity_top_matter_horizontal_margin">66dp</dimen>
@@ -34,6 +35,7 @@
     <dimen name="ninchat_chat_activity_message_video_play_icon_background_size">35dp</dimen>
     <dimen name="ninchat_chat_activity_message_video_play_icon_size">17dp</dimen>
     <dimen name="ninchat_chat_activity_chat_ended_top_margin">26dp</dimen>
+    <dimen name="ninchat_close_button_height">45dp</dimen>
     <dimen name="ninchat_chat_activity_message_margin">5dp</dimen>
     <dimen name="ninchat_chat_activity_action_bar_padding">15dp</dimen>
     <dimen name="ninchat_chat_activity_action_bar_height">50dp</dimen>
