--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left.xml
@@ -5,4 +5,8 @@
         android:topLeftRadius="0dp"
         />
     <solid android:color="@android:color/white" />
+    <padding android:left="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
+        android:top="@dimen/ninchat_chat_activity_message_bubble_padding_vertical"
+        android:bottom="@dimen/ninchat_chat_activity_message_bubble_padding_vertical"
+        android:right="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal" />
 </shape>
