--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_right.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_right.xml
@@ -5,4 +5,8 @@
         android:topRightRadius="0dp"
         />
     <solid android:color="@color/ninchat_colorPrimaryDark" />
+    <padding android:left="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
+        android:top="@dimen/ninchat_chat_activity_message_bubble_padding_vertical"
+        android:bottom="@dimen/ninchat_chat_activity_message_bubble_padding_vertical"
+        android:right="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal" />
 </shape>
